Update styling of doughnut graphs

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,6 +17,10 @@
       </ion-card-header>
       <ion-card-content class="canvas-container">
         <canvas #doughnutCanvas></canvas>
+        <div class="label-num">
+          <div class="label-num-left">0</div>
+          <div class="label-num-right">100</div>
+        </div>
       </ion-card-content>
     </ion-card>
 
@@ -26,6 +30,10 @@
       </ion-card-header>
       <ion-card-content class="canvas-container">
         <canvas #doughnutCanvas2></canvas>
+        <div class="label-num">
+          <div class="label-num-left">0</div>
+          <div class="label-num-right">100</div>
+        </div>
       </ion-card-content>
     </ion-card>
 
